Interested party work for research

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -26,6 +26,7 @@
 
         <div class="govuk-accordion" data-module="govuk-accordion" id="accordion-default">
 
+          <!-- before you start -->
           <div class="govuk-accordion__section">
             <div class="govuk-accordion__section-header">
               <h2 class="govuk-accordion__section-heading">
@@ -34,6 +35,7 @@
                 </span>
               </h2>
             </div>
+
             <div id="accordion-default-content-appellant" class="govuk-accordion__section-content" aria-labelledby="accordion-default-heading-appellant">
 
 
@@ -142,6 +144,7 @@
             </div>
           </div>
 
+          <!-- appellant submission -->
           <div class="govuk-accordion__section">
             <div class="govuk-accordion__section-header">
               <h2 class="govuk-accordion__section-heading">
@@ -378,6 +381,7 @@
             </div>
           </div>
 
+          <!-- local planning department -->
           <div class="govuk-accordion__section">
             <div class="govuk-accordion__section-header">
               <h2 class="govuk-accordion__section-heading">
@@ -470,9 +474,9 @@
                       Design tickets
                     </h4>
                     <ul class="govuk-list govuk-list-bulleted">
-                      <li><a href="https://pins-ds.atlassian.net.mcas.ms/browse/AS-4527" target="_blank">AS-4527 - View an appeal</a></li>
-                      <li><a href="https://pins-ds.atlassian.net.mcas.ms/browse/AS-4528" target="_blank">AS-4528 - View appeal documents</a></li>
-                      <li><a href="https://pins-ds.atlassian.net.mcas.ms/browse/AS-4529" target="_blank">AS-4529 - See appeal decisions</a></li>
+                      <li><a href="https://pins-ds.atlassian.net.mcas.ms/browse/AS-4527" target="_blank">AS-4527 - Interested party can view an appeal</a></li>
+                      <li><a href="https://pins-ds.atlassian.net.mcas.ms/browse/AS-4528" target="_blank">AS-4528 - Interested party can view appeal documents</a></li>
+                      <li><a href="https://pins-ds.atlassian.net.mcas.ms/browse/AS-4529" target="_blank">AS-4529 - Interested party can see appeal decisions</a></li>
                     </ul>
                   </div>
                 </details>
