--- a/app/views/interested-party/v4/appeal-details.html
+++ b/app/views/interested-party/v4/appeal-details.html
@@ -115,7 +115,7 @@
           <dd class="govuk-summary-list__value govuk-summary-list__value--no-border">
             Loft conversion of roof to existing dwelling (Certificate of Lawfulness of Proposed Use).
             <p class="govuk-body">
-              <a href="#">
+              <a href="https://www.bristol.gov.uk/planning-and-building-regulations">
                 View the application details on the local planning department’s website (opens in new tab)
               </a>
             </p>
