--- a/app/views/interested-party/v4/appeal-search-postcode.html
+++ b/app/views/interested-party/v4/appeal-search-postcode.html
@@ -1,9 +1,9 @@
 {% set pageref = "###" %}
 {% extends "layout.html" %}
 
-{% set serviceName = "Find out about planning appeals" %}
+{% set serviceName = "" %}
 
-{% set title = "Find an appeal using an address" %}
+{% set title = "Search for an appeal using a postcode" %}
 
 {% block pageTitle %}
   {{ title }} - {{serviceName}} - GOV.UK
