--- a/app/views/interested-party/v4/closed-appeals.html
+++ b/app/views/interested-party/v4/closed-appeals.html
@@ -3,7 +3,7 @@
 
 {% set serviceName = "Find out about planning appeals" %}
 
-{% set title = "Closed appeals" %}
+{% set title = "Completed appeals" %}
 
 {% block pageTitle %}
   {{ title }} - {{serviceName}} - GOV.UK
@@ -29,16 +29,16 @@
   <div class="govuk-grid-column-two-thirds">
 
     <h1 class="govuk-heading-l">
-      {{ title }}
+      {% if data['postcode'] %}
+        33 completed appeals found for {{ data['postcode'] }}
+      {% else %}
+        33 completed appeals found for BS3 3EX
+      {% endif %}
     </h1>
 
-    <p class="govuk-body">
-      {% if data['postcode'] %}
-        33 closed appeals found for {{ data['postcode'] }}. You cannot comment on closed appeals. <a href="appeal-search-address?version=" class="govuk-link">Search by a different postcode</a>
-      {% else %}
-        33 closed appeals found for BS3 3EX. You cannot comment on closed appeals. <a href="appeal-search-address?version=" class="govuk-link">Search by a different postcode</a>
-      {% endif %}
-    </p>
+    <p class="govuk-body-l">
+       Select an appeal to see the decision.
+     </p>
 
   </div>
 
@@ -46,26 +46,27 @@
   <div class="govuk-grid-column-full">
 
   {{ govukTable({
-    caption: "1 to 10 of closed appeals",
+    caption: "1 to 10 of completed appeals",
     captionClasses: "govuk-table__caption--m",
 
     head: [
 
       {
-        text: "Site address",
-        classes: 'govuk-!-width-one-quarter'
+        text: "Appeal site",
+        classes: 'govuk-!-width-one-third'
       },
       {
         text: "Applicant",
         classes: 'govuk-!-width-one-quarter'
       },
       {
-        text: "Appeal number",
-        classes: 'govuk-!-width-one-quarter'
+        text: "Appeal reference",
+        format: 'numeric'
       },
       {
-        text: "Date closed",
-        classes: 'govuk-!-width-one-quarter'
+        text: "Decision date",
+        classes: 'govuk-!-width-one-quarter',
+        format: 'numeric'
       }
     ],
     rows: [
@@ -77,10 +78,12 @@
           text: "Mel Pickins"
         },
         {
-          html: '<a class="govuk-link" href="appeal-details?status=closed&appealCode=0166002&site-address=102%20Aubrey%20Road%2C%20BS3%203EX&appellantName=Mel%20Pickins">0166002</a>'
+          html: '<a class="govuk-link" href="appeal-details?status=completed&appealCode=0166002&site-address=102%20Aubrey%20Road%2C%20BS3%203EX&appellantName=Mel%20Pickins">0166002</a>',
+          format: 'numeric'
         },
         {
-          text: "21 January 2022"
+          text: "21 January 2022",
+          format: 'numeric'
         }
       ],
       [
@@ -91,10 +94,12 @@
           text: "Nic Soonez"
         },
         {
-          html: '<a class="govuk-link" href="appeal-details?status=closed&appealCode=0141289&site-address=77%20Aubrey%20Road%2C%20BS3%203EX&appellantName=Nic%20Soonez">0141289</a>'
+          html: '<a class="govuk-link" href="appeal-details?status=completed&appealCode=0141289&site-address=77%20Aubrey%20Road%2C%20BS3%203EX&appellantName=Nic%20Soonez">0141289</a>',
+          format: 'numeric'
         },
         {
-          text: "21 January 2022"
+          text: "21 January 2022",
+          format: 'numeric'
         }
       ],
       [
@@ -105,10 +110,12 @@
           text: "Talisan Creedance"
         },
         {
-          html: '<a class="govuk-link" href="appeal-details?status=completed&appealCode=0165971&site-address=19%20Aubrey%20Road%2C%20BS3%203EX&appellantName=Talisan%20Creedance">0165971</a>'
+          html: '<a class="govuk-link" href="appeal-details?status=completed&appealCode=0165971&site-address=19%20Aubrey%20Road%2C%20BS3%203EX&appellantName=Talisan%20Creedance">0165971</a>',
+          format: 'numeric'
         },
         {
-          text: "12 January 2022"
+          text: "12 January 2022",
+          format: 'numeric'
         }
       ],
       [
@@ -119,10 +126,12 @@
           text: "J. M. Wigstone"
         },
         {
-          html: '<a class="govuk-link" href="appeal-details?status=completed&appealCode=0165791&site-address=2%20Aubrey%20House%2C%20Aubrey%20Road%2C%20BS3%203EX&appellantName=J.%20M.%20Wigstone">0165791</a>'
+          html: '<a class="govuk-link" href="appeal-details?status=completed&appealCode=0165791&site-address=2%20Aubrey%20House%2C%20Aubrey%20Road%2C%20BS3%203EX&appellantName=J.%20M.%20Wigstone">0165791</a>',
+          format: 'numeric'
         },
         {
-          text: "20 December 2021"
+          text: "20 December 2021",
+          format: 'numeric'
         }
       ],
 
@@ -134,10 +143,12 @@
           text: "Jan Fish"
         },
         {
-          html: '<a class="govuk-link" href="appeal-details?status=completed&appealCode=0166241&site-address=1%20Aubrey%20House%2C%20Aubrey%20Road%2C%20BS3%203EX&appellantName=Jan%20Fish">0166241</a>'
+          html: '<a class="govuk-link" href="appeal-details?status=completed&appealCode=0166241&site-address=1%20Aubrey%20House%2C%20Aubrey%20Road%2C%20BS3%203EX&appellantName=Jan%20Fish">0166241</a>',
+          format: 'numeric'
         },
         {
-          text: "11 July 2021"
+          text: "11 July 2021",
+          format: 'numeric'
         }
       ],
       [
@@ -148,10 +159,12 @@
           text: "P. J. Thames"
         },
         {
-          html: '<a class="govuk-link" href="appeal-details?status=completed&appealCode=0166111&site-address=22%20Aubrey%20Road%2C%20BS3%203EX&appellantName=P.%20J.%20Thames">0166111</a>'
+          html: '<a class="govuk-link" href="appeal-details?status=completed&appealCode=0166111&site-address=22%20Aubrey%20Road%2C%20BS3%203EX&appellantName=P.%20J.%20Thames">0166111</a>',
+          format: 'numeric'
         },
         {
-          text: "13 June 2021"
+          text: "13 June 2021",
+          format: 'numeric'
         }
       ],
       [
@@ -162,10 +175,12 @@
           text: "Danny Fiakkas"
         },
         {
-          html: '<a class="govuk-link" href="appeal-details?status=completed&appealCode=0166102&site-address=155%20Aubrey%20Road%2C%20BS3%203EX&appellantName=Danny%20Fiakkas">0166102</a>'
+          html: '<a class="govuk-link" href="appeal-details?status=completed&appealCode=0166102&site-address=155%20Aubrey%20Road%2C%20BS3%203EX&appellantName=Danny%20Fiakkas">0166102</a>',
+          format: 'numeric'
         },
         {
-          text: "13 April 2021"
+          text: "13 April 2021",
+          format: 'numeric'
         }
       ],
       [
@@ -176,10 +191,12 @@
           text: "Pavarthi Sagar"
         },
         {
-          html: '<a class="govuk-link" href="appeal-details?status=completed&appealCode=0165854&site-address=32%20Vicarage%20Court%2C%20Aubrey%20Road%2C%20BS3%203EX&appellantName=Pavarthi%20Sagar">0165854</a>'
+          html: '<a class="govuk-link" href="appeal-details?status=completed&appealCode=0165854&site-address=32%20Vicarage%20Court%2C%20Aubrey%20Road%2C%20BS3%203EX&appellantName=Pavarthi%20Sagar">0165854</a>',
+          format: 'numeric'
         },
         {
-          text: "13 April 2021"
+          text: "13 April 2021",
+          format: 'numeric'
         }
       ],
       [
@@ -190,10 +207,12 @@
           text: "Ash Davenant"
         },
         {
-          html: '<a class="govuk-link" href="appeal-details?status=completed&appealCode=0165921&site-address=8%20Aubrey%20Road%2C%20BS3%203EX&appellantName=Ash%20Davenant">0165921</a>'
+          html: '<a class="govuk-link" href="appeal-details?status=completed&appealCode=0165921&site-address=8%20Aubrey%20Road%2C%20BS3%203EX&appellantName=Ash%20Davenant">0165921</a>',
+          format: 'numeric'
         },
         {
-          text: "8 March 2021"
+          text: "8 March 2021",
+          format: 'numeric'
         }
       ],
       [
@@ -204,10 +223,12 @@
           text: "Charlie Agadosi"
         },
         {
-          html: '<a class="govuk-link" href="appeal-details?status=completed&appealCode=0166013&site-address=1%20Vicarage%20Court%2C%20Aubrey%20Road%2C%20BS3%203EX&appellantName=Charlie%20Agadosi">0166013</a>'
+          html: '<a class="govuk-link" href="appeal-details?status=completed&appealCode=0166013&site-address=1%20Vicarage%20Court%2C%20Aubrey%20Road%2C%20BS3%203EX&appellantName=Charlie%20Agadosi">0166013</a>',
+          format: 'numeric'
         },
         {
-          text: "18 February 2021"
+          text: "18 February 2021",
+          format: 'numeric'
         }
       ]
     ]
