--- a/app/views/interested-party/v4/guidance.html
+++ b/app/views/interested-party/v4/guidance.html
@@ -1,9 +1,9 @@
 {% set pageref = "###" %}
 {% extends "layout.html" %}
 
-{% set serviceName = "Find out about planning appeals" %}
+{% set serviceName = "" %}
 
-{% set title = "Guidance for submitting comments" %}
+{% set title = "Guidance" %}
 
 {% block pageTitle %}
   {{ title }} - {{serviceName}} - GOV.UK
@@ -33,11 +33,51 @@
       </h1>
 
       <p class="govuk-body">
-        You can use this service to comment on an appeal.
+        This is a service for searching, viewing and commenting on planning appeals.
       </p>
 
+      <p class="govuk-body">
+        You can use this service to:
+      </p>
+
+      <ul class="govuk-list govuk-list--bullet">
+
+        <li>
+          view appeals that are open for comments and submit your comments
+        </li>
+
+        <li>
+          view appeals that are closed for comments
+        </li>
+
+        <li>
+          view appeals that are complete and view the decision for those appeals
+        </li>
+
+      </ul>
+
+      <p class="govuk-body">
+        If you want to comment on an appeal, you'll need:
+      </p>
+
+      <ul class="govuk-list govuk-list--bullet">
+
+        <li>
+          the 7-digit reference number that can be found on your letter from the local planning department. This can also be found on the local planning department's website
+        </li>
+
+        <li>
+          an email address so we can contact you if we have any questions
+        </li>
+
+        <li>
+          your comments saved in a document
+        </li>
+
+      </ul>
+
       <h2 class="govuk-heading-m">
-        Your comments
+        Guidance about your comments
       </h2>
 
       <p class="govuk-body">
@@ -138,14 +178,14 @@
       </h2>
 
       <p class="govuk-body">
-        You will need:
+        To comment on an appeal, you will need:
       </p>
 
       <ul class="govuk-list govuk-list--bullet">
         <!-- <li>the appeal reference number</li> -->
         <!-- <li>the 7 digit appeal reference number</li> -->
         <li>
-          the 7-digit appeal reference that can be found on your letter from the local planning department.
+          the 7-digit appeal reference number that can be found on your letter from the local planning department.  This can also be found on the local planning department's website
         </li>
         <li>
           an email address so we can contact you if we have any questions
