--- a/app/views/index.html
+++ b/app/views/index.html
@@ -38,7 +38,6 @@
 
             <div id="accordion-default-content-appellant" class="govuk-accordion__section-content" aria-labelledby="accordion-default-heading-appellant">
 
-
               <div class="govuk-grid-row">
                 <div class="govuk-grid-column-two-thirds">
 
@@ -421,6 +420,7 @@
 
           </div>
 
+          <!-- interested parties -->
           <div class="govuk-accordion__section">
             <div class="govuk-accordion__section-header">
               <h2 class="govuk-accordion__section-heading">
@@ -436,8 +436,8 @@
               <div class="govuk-inset-text govuk-!-margin-top-0">
 
                 {{ govukTag({
-                  classes: "govuk-tag--orange govuk-!-margin-bottom-1",
-                  text: "WIP"
+                  classes: "govuk-tag--green govuk-!-margin-bottom-1",
+                  text: "Ready for UR"
                 }) }}
 
                 <span class="govuk-caption-m">Sprint 10 - Democratic Republic of Congo</span>
@@ -453,6 +453,48 @@
                     </a>
                   </li>
 
+                  <li>
+                    <a href="/interested-party/v4/appeal-number" class="govuk-link--no-visited-state">
+                      How do you want to search for an appeal?
+                    </a>
+                  </li>
+
+                  <li>
+                    <a href="/interested-party/v4/appeal-search-postcode" class="govuk-link--no-visited-state">
+                      Search for an appeal using a postcode
+                    </a>
+                  </li>
+
+                  <li>
+                    <a href="/interested-party/v4/open-appeals?version=" class="govuk-link--no-visited-state">
+                      Appeals in progress
+                    </a>
+                  </li>
+
+                  <li>
+                    <a href="/interested-party/v4/appeal-details?status=open" class="govuk-link--no-visited-state">
+                      Appeal details - Open for comments
+                    </a>
+                  </li>
+
+                  <li>
+                    <a href="/interested-party/v4/appeal-details?status=closed" class="govuk-link--no-visited-state">
+                      Appeal details - Closed for comments
+                    </a>
+                  </li>
+
+                  <li>
+                    <a href="/interested-party/v4/closed-appeals" class="govuk-link--no-visited-state">
+                      Completed appeals
+                    </a>
+                  </li>
+
+                  <li>
+                    <a href="/interested-party/v4/appeal-details?status=completed" class="govuk-link--no-visited-state">
+                      Appeal details - completed appeal
+                    </a>
+                  </li>
+
                 </ul>
 
                 <details class="govuk-details govuk-!-margin-bottom-0" data-module="govuk-details">
@@ -462,14 +504,6 @@
                     </span>
                   </summary>
                   <div class="govuk-details__text">
-                    <!-- <h4 class="govuk-heading-s">
-                      Content tickets
-                    </h4>
-                    <ul class="govuk-list govuk-list-bulleted govuk-!-margin-bottom-3">
-                      <li><a href="https://pins-ds.atlassian.net/browse/AS-4209" target="_blank">AS-4209 - Householder appeal notification letter (LPD template)</a></li>
-                      <li><a href="https://pins-ds.atlassian.net/browse/AS-4215" target="_blank">AS-4215 - Full Planning appeal notification letter (LPD template)</a></li>
-                      <li><a href="https://pins-ds.atlassian.net/browse/AS-4214" target="_blank">AS-4214 - Submission confirmation email (Gov Notify)</a></li>
-                    </ul> -->
                     <h4 class="govuk-heading-s">
                       Design tickets
                     </h4>
