Small updates for interested parties

--- a/app/views/interested-party/v4/appeal-details.html
+++ b/app/views/interested-party/v4/appeal-details.html
@@ -3,7 +3,7 @@
 {% set pageref = "###" %}
 {% extends "layout.html" %}
 
-{% set serviceName = "Find out about planning appeals" %}
+{% set serviceName = "" %}
 
 {% if data['appealCode'] != "true" %}
   {% set appealCode = "0166327" %}
