--- a/app/views/interested-party/v4/closed-appeals.html
+++ b/app/views/interested-party/v4/closed-appeals.html
@@ -1,7 +1,7 @@
 {% set pageref = "###" %}
 {% extends "layout.html" %}
 
-{% set serviceName = "Find out about planning appeals" %}
+{% set serviceName = "" %}
 
 {% set title = "Completed appeals" %}
 
@@ -37,7 +37,7 @@
     </h1>
 
     <p class="govuk-body-l">
-       Select an appeal to see the decision.
+       View an appeal to see the decision.
      </p>
 
   </div>
