--- a/app/views/interested-party/v4/open-appeals.html
+++ b/app/views/interested-party/v4/open-appeals.html
@@ -59,7 +59,7 @@
     </h2>
 
     <p class="govuk-body">
-      Select an appeal reference to view the appeal details
+      Select an appeal reference to view the appeal details.
     </p>
 
     <!-- <p class="govuk-body">
