--- a/app/views/interested-party/v4/appeal-details.html
+++ b/app/views/interested-party/v4/appeal-details.html
@@ -155,7 +155,7 @@
                 Allowed
               {% endif %}
               <p class="govuk-body">
-                <a href="#">
+                <a href="appeal-decision">
                   View the decision document for this appeal
                 </a>
               </p>
