Removing link to decision on open appeal details

--- a/app/views/interested-party/v4/appeal-details.html
+++ b/app/views/interested-party/v4/appeal-details.html
@@ -182,12 +182,14 @@
 
       </dl>
 
-      <p class="govuk-body">
-        View the decision document for this appeal<br>
-        <a href="{{ asset_path }}files/blank.pdf">
-           Decision-letter-0166327.pdf
-        </a>
-      </p>
+      {% if data['status'] == "completed" %}
+        <p class="govuk-body">
+          View the decision document for this appeal<br>
+          <a href="{{ asset_path }}files/blank.pdf">
+             Decision-letter-0166327.pdf
+          </a>
+        </p>
+      {% endif %}
 
     </div>
 
