Content fix on listed building Q in BYS v10

--- a/app/views/before-you-start/v10/listed-building.html
+++ b/app/views/before-you-start/v10/listed-building.html
@@ -34,7 +34,7 @@
           name: "bys-"+version+"-listedbuilding",
           fieldset: {
             legend: {
-              text: "Is your appeal about a listed building?",
+              text: "Was your planning application about a listed building?",
               isPageHeading: true,
               classes: "govuk-fieldset__legend--l"
             }
