page title update to match h1

--- a/app/views/before-you-start/v10/listed-building.html
+++ b/app/views/before-you-start/v10/listed-building.html
@@ -2,7 +2,7 @@
 {% extends "layouts/before-you-start/v10.html" %}
 
 {% block pageTitle %}
-  Is your appeal about a listed building? - Before you start - {{serviceName}} - GOV.UK
+  Was your planning application about a listed building? - Before you start - {{serviceName}} - GOV.UK
 {% endblock %}
 
 {% block beforeContent %}
