minor content fix on BYS shutter page for no decision

--- a/app/views/before-you-start/v10/shutter/out-of-time-no-decision.html
+++ b/app/views/before-you-start/v10/shutter/out-of-time-no-decision.html
@@ -19,7 +19,7 @@
       </p>
 
       <p class="govuk-body">
-        Your deadline was {{ data['bys-'+version+'-deadline-day'] }} {{ data['bys-'+version+'-deadline-month'] | formatMonth }} {{ data['bys-'+version+'-deadline-year'] }}. This is 6 months from the decision date.
+        Your deadline was {{ data['bys-'+version+'-deadline-day'] }} {{ data['bys-'+version+'-deadline-month'] | formatMonth }} {{ data['bys-'+version+'-deadline-year'] }}. This is 6 months from the date the decision was due.
       </p>
 
     </div>
