--- a/app/views/index.html
+++ b/app/views/index.html
@@ -436,8 +436,8 @@
               <div class="govuk-inset-text govuk-!-margin-top-0">
 
                 {{ govukTag({
-                  classes: "govuk-tag--green govuk-!-margin-bottom-1",
-                  text: "Ready for UR"
+                  classes: "govuk-tag--blue govuk-!-margin-bottom-1",
+                  text: "Done"
                 }) }}
 
                 <span class="govuk-caption-m">Sprint 10 - Democratic Republic of Congo</span>
@@ -497,7 +497,7 @@
 
                 </ul>
 
-                <details class="govuk-details govuk-!-margin-bottom-0" data-module="govuk-details">
+                <details class="govuk-details govuk-!-margin-bottom-6" data-module="govuk-details">
                   <summary class="govuk-details__summary">
                     <span class="govuk-details__summary-text">
                       Jira Tickets (3)
@@ -514,7 +514,20 @@
                     </ul>
                   </div>
                 </details>
+
+                <h4 class="govuk-heading-s">
+                  Results
+                </h4>
+                <ul class="govuk-list govuk-list-bulleted">
+                  <li>
+                    <a href="https://miro.com/app/board/uXjVOM_dDzA=/" target="_blank">
+                      Miro board research notes
+                    </a>
+                  </li>
+                </ul>
+
               </div>
+
               <!-- sprint Cote d’Ivoire -->
               <div class="govuk-inset-text govuk-!-margin-top-0">
 
@@ -590,7 +603,7 @@
 
                 </ul>
 
-                <details class="govuk-details govuk-!-margin-bottom-0" data-module="govuk-details">
+                <details class="govuk-details govuk-!-margin-bottom-6" data-module="govuk-details">
                   <summary class="govuk-details__summary">
                     <span class="govuk-details__summary-text">
                       Jira Tickets (6)
@@ -615,6 +628,18 @@
                     </ul>
                   </div>
                 </details>
+
+                <h4 class="govuk-heading-s">
+                  Results
+                </h4>
+                <ul class="govuk-list govuk-list-bulleted">
+                  <li>
+                    <a href="https://miro.com/app/board/uXjVOQpNBv8=/" target="_blank">
+                      Miro board research notes
+                    </a>
+                  </li>
+                </ul>
+
               </div>
 
               <!-- sprint Belgium -->
@@ -636,13 +661,8 @@
                       Householder appeal first notice (letter)
                     </a>
                   </li>
-                  <!-- <li>
-                    <a href="/interested-party/v2/householder-appeal-first-notice" class="govuk-link--no-visited-state">
-                      Householder appeal first notice (email)
-                    </a>
-                  </li> -->
-
                   <br>
+
                   <li>
                     <a href="/interested-party/v2/guidance" class="govuk-link--no-visited-state">
                       Guidance for commenting on an appeal
@@ -669,21 +689,6 @@
                       Select the appeal
                     </a>
                   </li>
-                  <!-- <li>
-                    <a href="/interested-party/v2/select-appeal?version=linked-address-first" class="govuk-link--no-visited-state">
-                      Select the appeal (linked address first)
-                    </a>
-                  </li>
-                  <li>
-                    <a href="/interested-party/v2/select-appeal?version=linked-appeal-ref-first" class="govuk-link--no-visited-state">
-                      Select the appeal (linked appeal reference first)
-                    </a>
-                  </li>
-                  <li>
-                    <a href="/interested-party/v2/select-appeal?version=" class="govuk-link--no-visited-state">
-                      Select the appeal (less data)
-                    </a>
-                  </li> -->
                   <li>
                     <a href="/interested-party/v2/appeal-details?status=open" class="govuk-link--no-visited-state">
                       Appeal open for comments
@@ -722,7 +727,7 @@
 
                 </ul>
 
-                <details class="govuk-details govuk-!-margin-bottom-0" data-module="govuk-details">
+                <details class="govuk-details govuk-!-margin-bottom-6" data-module="govuk-details">
                   <summary class="govuk-details__summary">
                     <span class="govuk-details__summary-text">
                       Jira Tickets (6)
@@ -747,6 +752,18 @@
                     </ul>
                   </div>
                 </details>
+
+                <h4 class="govuk-heading-s">
+                  Results
+                </h4>
+                <ul class="govuk-list govuk-list-bulleted">
+                  <li>
+                    <a href="https://miro.com/app/board/uXjVOXJh3aM=/" target="_blank">
+                      Miro board research notes
+                    </a>
+                  </li>
+                </ul>
+
               </div>
 
               <!-- sprint Austria -->
@@ -853,8 +870,11 @@
                   Results
                 </h4>
                 <ul class="govuk-list govuk-list-bulleted">
-                  <li><a href="https://miro.com/app/board/uXjVOSz_vAA=/" target="_blank">Miro board research notes (Sprint Austria)</a></li>
-                  <!-- <li><a href="#" target="_blank">Confluence notes</a></li> -->
+                  <li>
+                    <a href="https://miro.com/app/board/uXjVOSz_vAA=/" target="_blank">
+                      Miro board research notes
+                    </a>
+                  </li>
                 </ul>
 
               </div>
