Appeals content updates

--- a/app/views/interested-party/v4/closed-appeals.html
+++ b/app/views/interested-party/v4/closed-appeals.html
@@ -36,8 +36,8 @@
       {% endif %}
     </h1>
 
-    <p class="govuk-body-l">
-       View an appeal to see the decision.
+    <p class="govuk-body govuk-!-margin-bottom-6">
+       Select an appeal to go to the decision.
      </p>
 
   </div>
