--- a/app/views/save-progress/v1/appeal-saved-email.html
+++ b/app/views/save-progress/v1/appeal-saved-email.html
@@ -1,15 +1,7 @@
-
-
-
-
-
-
-
-
 {% extends "layout-email.html" %}
 
 {% block pageTitle %}
-  Interested party full planning notification
+  Appeal saved email
 {% endblock %}
 
 
@@ -18,7 +10,7 @@ Dear [IP NAME]Site detailsSite Address:[INSERT HERE]Description of development:[
 
 
 {% block content %}
-<p><strong>Subject:</strong> We’ve received your comments for appeal APP/Q999/O/21/0166327</p>
+<p><strong>Subject:</strong> Return to appeal a planning decision</p>
 <p><strong>From:</strong> planningappeals@bristolcitycouncil.gov.uk</p>
 
 <!-- <img src="{{ asset_path }}images/pi-logo.png" width="150"/> -->
@@ -28,45 +20,28 @@ Dear [IP NAME]Site detailsSite Address:[INSERT HERE]Description of development:[
 <div class="govuk-grid-row govuk-!-margin-top-5">
   <div class="govuk-grid-column-two-thirds">
 
-    <!-- <p class="govuk-body">Planning appeal reference: A/1234567</p> -->
     <p class="govuk-body">Dear [name],</p>
-    <!-- <p class="govuk-body">We’ve started a full appeal against the refusal of planning application <strong>A/10112454</strong>.</p> -->
 
     <p class="govuk-body">
-      Your comments have been received.
+      You saved your appeal submission 0123456 on 10 March 2022.
     </p>
 
     <p class="govuk-body">
-      <strong>Appeal reference:</strong><br>
-      0166327
+      Go to the link to continue with your appeal submission:
     </p>
 
     <p class="govuk-body">
-      <strong>Appeal site:</strong><br>
-      1 Aubrey House
-      Aubrey Road
-      Bristol BS3 3EX
-    </p>
-
-    <h2 class="govuk-heading-m">
-      What happens next
-    </h2>
-
-    <p class="govuk-body">
-      Your comments will be shared with the applicant and local planning department.
+      <a href="email-confirmed">
+        www.gov.uk/appeal-a-planning-decision/continue/
+      </a>
     </p>
 
     <p class="govuk-body">
-      An Inspector will review them when determining the appeal.
+      You have until 3 April 2022 to submit your appeal.
     </p>
 
     <p class="govuk-body">
-      When a decision is made, it will be published online at <a href="https://www.bristol.gov.uk/planning-and-building-regulations/search-and-track-planning-applications">https://www.bristol.gov.uk/planning-and-building-regulations/search-and-track-planning-applications</a>
-    </p>
-
-    <p class="govuk-body">
-      From,​<br>
-      Bristol City Council Planning Department<br>
+      From The Planning Inspectorate
     </p>
 
   </div>
